2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems/installer.rb - commented out stub addition and removal
2004-08-28  Rich Kilmer <rich@infoether.com>

        * /lib/rubygems.rb, /lib/rubygems/loadpath_manager.rb -
         this adds all the loadpath_manager stuff with the 'ultimate require hack' to
         rubygems.rb.  Also, require_gem methods body has been extracted into a method
         Gem.activate that differs in the calling signature in that the second param is
         a boolean that determines whether to autorequire or not.

2004-08-27  Rich Kilmer <rich@infoether.com>

        * lib/rubygems/user_interaction - added ask_yes_no as a method
          which returns true/false and formats/processes the [yn] stuff.
          it also has an optional second parameter of true/false for the
          default value.

        * lib/rubygems/installer.rb, lib/rubygems/remote_installer.rb, 
          lib/rubygems/command_manager.rb - changed all places where ask 
          was used with [Yn] to ask_yes_no
2004-08-24  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/installer.rb: Library stubs are now installed as per
	  'library_stubs' gemspec attribute.  A stub is (still) also installed
	  for the 'autorequire' attribute.  All library stub handling
	  refactored into two new classes: LibraryStubs and LibraryStub.

	* test/test_parse_commands.rb: as per 2004-08-17 below, the 'update'
	  command takes --rdoc as its default now.

2004-08-22  Rich Kilmer <rich@infoether.com>
        * lib/rubygems/installer.rb: fixed stub generation...i added the version 
          stuff that only app stubs should have...sorry!

2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb: --rdoc is default on 'update' command,
	  consistent with 'install'.  'default_str' methods changed to reflect
	  --rdoc being default now.

2004-08-21  Chad Fowler  <chad@chadfowler.com>